--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,11 @@
     "typeRoots": [
       "node_modules/@types"
     ],
+    "paths": {
+      "@/*": [
+        "src/app/*"
+      ],
+    },
     "lib": [
       "es2018",
       "dom"
